# cookiecutter-MOAD-pypkg

./: .gitignore  .pre-commit-config.yaml  README.rst  cookiecutter.json
env/: environment.yaml
envs/: environment.yaml  requirements.txt
{{cookiecutter.package_name}}/: .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.package_name}}/docs/: conf.py  index.rst  pkg_development.rst
{{cookiecutter.package_name}}/docs/_templates/: layout.html
{{cookiecutter.package_name}}/envs/: environment-dev.yaml  environment-rtd.yaml  environment-test.yaml  requirements.txt
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_slug}}.py
{{cookiecutter.package_name}}/{{cookiecutter.package_slug}}/: __init__.py
