# Copyright {{ cookiecutter.project_creation_year }} – present, {{ cookiecutter.copyright_holder }}
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "{{ cookiecutter.package_name }}"
dynamic = [ "version" ]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.rst"
requires-python = ">={{ cookiecutter.min_python_version }}"
license = { file = "LICENSE" }
authors = [
    { name = "{{ cookiecutter.package_author_name }}", email = "{{ cookiecutter.package_author_email }}" },
]
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: {{ cookiecutter.min_python_version }}",
    "Programming Language :: Python :: {{ cookiecutter.dev_python_version }}",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
]
dependencies = [
    # see envs/environment-dev.yaml for conda environment dev installation
    # see envs/requirements.txt for versions most recently used in development
]

[project.urls]
"Documenation" = ""
"Issue Tracker" = "https://github.com/{{ cookiecutter.github_org }}/{{ cookiecutter.github_repo_name }}/issues"
"Source Code" = "https://github.com/{{ cookiecutter.github_org }}/{{ cookiecutter.github_repo_name }}"


[tool.coverage.run]
branch = true
source = [ "{{ cookiecutter.package_slug }}", "tests"]

[tool.coverage.report]
show_missing = true


[tool.hatch.version]
path = "nemo_cmd/__init__.py"
